feat: added controller for vocabularies
